mentor ma messages nu icon add kariyu and pages sarkha kariya

--- a/ASCEND 3/ASCEND 3/ascend-ui/dashboard.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/dashboard.html
@@ -171,7 +171,8 @@
 
                 <!-- Stats Cards -->
                 <div class="stats-grid">
-                    <div class="stats-card">
+                    <div class="stats-card" onclick="window.location.href='student-my-questions.html'"
+                        style="cursor: pointer; transition: transform 0.2s;">
                         <div class="stats-card-icon blue">
                             <i data-lucide="message-square" style="width: 24px; height: 24px; stroke-width: 1.5;"></i>
                         </div>
@@ -181,7 +182,8 @@
                         </div>
                     </div>
 
-                    <div class="stats-card">
+                    <div class="stats-card" onclick="window.location.href='student-mentor-responses.html'"
+                        style="cursor: pointer; transition: transform 0.2s;">
                         <div class="stats-card-icon green">
                             <i data-lucide="mail" style="width: 24px; height: 24px; stroke-width: 1.5;"></i>
                         </div>
