--- a/ASCEND 3/ASCEND 3/ascend-ui/student-mentor-responses.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/student-mentor-responses.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/pages.css">
-    <link rel="stylesheet" href="css/header-style.css">
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="js/include-components.js"></script>
@@ -147,7 +146,7 @@
     <!-- Header -->
     <header class="header">
         <div class="dashboard-nav-group">
-            <a href="dashboard.html" class="sidebar-nav-item">
+            <a href="dashboard.html" class="sidebar-nav-item active" style="color: var(--primary) !important;">
                 <i data-lucide="layout-dashboard" style="width: 18px; height: 18px; stroke-width: 2;"></i>
                 <span>Dashboard</span>
             </a>
@@ -170,7 +169,7 @@
 
         <div style="display: flex; align-items: center; gap: 1.5rem;">
             <button onclick="window.location.href='student-messages.html'"
-                style="background: none; border: none; color: #4da3ff; cursor: pointer; padding: 0.5rem; display: flex; align-items: center; transition: color 0.2s;">
+                style="background: none; border: none; color: #ffffff; cursor: pointer; padding: 0.5rem; display: flex; align-items: center; transition: color 0.2s;">
                 <i data-lucide="message-square" style="width: 20px; height: 20px;"></i>
             </button>
 
